css/style.css
html {
	font-size: 32px;
}

body,
*,
*:before,
*:after {
	box-sizing: border-box;
}

body {
	background-color: #E4E0D8;
}

a {
	color: #F9F6EE;
	font-weight: bold;
	text-decoration: none;
	font-size: 0.5rem;
}

a:hover {
	color: #CCA3DC;
	font-weight: bold;
	text-decoration: none;
}

a:active {
	color: #B7C18F;
	font-weight: bold;
	text-decoration: none;
}

p {
	border: 1px solid #000000;
	padding: 10px;
	margin: 10px;
	width: 30%;
	font-size: 0.75rem;
	text-align: center;
}

.fixed-width {
	width: 940px;
	margin: 0 auto;
}

.clearfix:before,
.clearfix:after {
	content: "";
	display: table;
}

.clearfix:after {
	clear: both;
}

/*=================================
Header
=================================*/

h1 a {
	/*
	position: center;
	display: block;
	overflow: hidden;
*/
	position: absolute !important;
	border: 0 !important;
	padding-top: .6rem;
	margin: 0 !important;
	color: #F9F6EE;
	font-family: "Outfit", sans-serif;
	text-transform: uppercase;
	font-size: 1rem;
	font-weight: bold;
	display: inline-block;
}

.page-header {
	background-color: #454545;
	padding-top: .6rem;
	padding-bottom: .5em;
}

.logo {
	float: left;
	display: block;
	margin-left: auto;
	margin-right: auto;
	width: 10%;
}

.page-header nav {
	float: right;
	text-transform: uppercase;
	padding-top: .5rem;
}

.page-header nav li {
	/*float: left;*/
	margin-right: 3rem;
	display: inline-block;
	color: #F9F6EE;
}

/*===================================
Section 1
===================================*/

.hero {
	width: 100%;
	height: 50%;
}

.hero img {
	width: 100%;
	height: 100%;
}

h2 {
	color: #1C1C1C;
	text-align: center;
	font-size: 24px;
	font-weight: bold;
	padding-top: 1rem;
	padding-bottom: 1rem;
	font-family: Rozha+One&display, serif;
	border: 1px solid #000000;
	margin: 1rem;
}

/*====================================
Features
====================================*/

.features {
	display: flex;
}

.feature img {
	display: block;
}

.feature img,
.feature p {
	margin: auto;
	padding-bottom: 1rem;
	width: 89%;
}

.feature p {
	padding-top: 1rem;
}

/*====================================
Community
====================================*/

.community {
	display: flex;
	padding: 1rem .45rem;
}

.community img {
	display: block;
	width: 55%;
	overflow: hidden;
	padding-left: .05rem;
}

.community img,
.community p {
	margin: auto;
	min-height: 13.5rem;
}

.community p {
	grid-column-start: 2;
	grid-column-end: span 1;
	width: 35%;
	overflow: hidden;
	margin-right: 1.8rem;
	text-align: center;
	padding-top: 10%;
}

/*===================================
Footer
===================================*/

.page-footer {
	background-color: #454545;
}

.copyright {
	border: none;
	font-size: .5rem;
	text-align: right;
}


footer li {
	float: left;
	margin-right: 3rem;
	padding-top: 1rem;
	padding-bottom: 1rem;
	display: block;
	color: #F9F6EE;
	background-color: #454545;
}

footer p {
	float: right;
	padding-top: 1rem;
	padding-bottom: 1rem;
	color: #F9F6EE;
	background-color: #454545;
}

